# JNBullet

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Jenkinsfile  LICENSE  README.md  build-android32.xml  build-ios32.xml  build-linux32.xml  build-linux64.xml  build-macosx32.xml  build-macosx64.xml  build-swig.xml  build-windows32.xml  build-windows32home.xml  build-windows64.xml  build.gradle  build.xml  gradle.properties  ivy.xml  ivysettings.xml  pom.xml  publishNatives.gradle  settings.gradle
.github/workflows/: allInOne.yml  linux_amd64.yml  macosx_aarch64.yml  macosx_amd64.yml  publish.yml
config/gradle/: artifactory.gradle  artifactoryNatives.gradle  common.gradle
gradle/wrapper/: gradle-wrapper.properties
jni/: build-ios32.xml  build-linux32.xml  build-linux64.xml  build-macosx32.xml  build-macosx64.xml  build-windows32.xml  build-windows32home.xml  build-windows64.xml  build.xml
jni/maven/: pom.xml
jni/src/bullet/BulletCollision/: CMakeLists.txt
jni/src/bullet/BulletSoftBody/: btSoftBodyConcaveCollisionAlgorithm.cpp  btSoftRigidDynamicsWorld.cpp
jni/swig-src/collision/: classes.i  collision_wrap.cpp  collision_wrap.h
jni/swig-src/dynamics/: dynamics_wrap.cpp
jni/swig/collision/: btBvhTriangleMeshShape.i  btCollisionObject.i  btCollisionObjectWrapper.i  btCollisionShape.i  btCompoundShape.i  btMultiSphereShape.i  btTriangleIndexVertexArray.i  collision.i
jni/swig/common/: gdxMathTypes.i
jni/swig/dynamics/: dynamics.i
jni/swig/extras/: extras.i
jni/swig/extras/serialize/: gdxBulletSerialize.i
jni/swig/softbody/: btSoftBody.i  softbody.i
natives/: build.gradle
natives/bullet/: CMakeLists.txt
natives/bullet/BulletCollision/: CMakeLists.txt
natives/bullet/BulletCollision/BroadphaseCollision/: btBroadphaseProxy.h
natives/bullet/BulletCollision/CollisionDispatch/: btCollisionDispatcher.cpp  btCollisionObjectWrapper.h  btCollisionWorld.cpp  btCollisionWorld.h  btCompoundCollisionAlgorithm.cpp  btCompoundCompoundCollisionAlgorithm.cpp  btConvexConcaveCollisionAlgorithm.cpp  btDefaultCollisionConfiguration.cpp  btDefaultCollisionConfiguration.h  btVoxelCollisionAlgorithm.cpp  btVoxelCollisionAlgorithm.h
natives/bullet/BulletCollision/CollisionShapes/: btCollisionShape.h  btVoxelShape.h
natives/bullet/BulletSoftBody/: btSoftBodyConcaveCollisionAlgorithm.cpp  btSoftMultiBodyDynamicsWorld.cpp  btSoftRigidDynamicsWorld.cpp
natives/custom/gdx/collision/: ClosestNotMeConvexResultCallback.h  ClosestNotMeRayResultCallback.h  CollisionObjectWrapper.h  ContactCache.h  ContactListener.h  GdxCollisionObjectBridge.h  VoxelCollisionAlgorithmWrapper.cpp  VoxelCollisionAlgorithmWrapper.h
natives/custom/gdx/dynamics/: CustomActionInterface.h  FilterableVehicleRaycaster.h  (+1 more)
swig/: build.xml
swig-src/: build.gradle
swig-src/collision/: ContactListener.i  btAxisSweep3.i  btBroadphasePairArray.i  btBvhTriangleMeshShape.i  btCollisionObject.i  btCollisionObjectWrapper.i  btCollisionShape.i  btCompoundShape.i  btManifoldPoint.i  btTriangleIndexVertexArray.i  classes.i  collision.i  collision_wrap.cxx  collision_wrap.h  gimpact.i
swig-src/common/: gdxCommon.i  gdxJavaImports.i  gdxManagedObject.i  gdxMathTypes.i
swig-src/dynamics/: btRigidBody.i  classes.i  dynamics.i
swig-src/extras/: classes.i  extras.i
swig-src/extras/serialize/: gdxBulletSerialize.i
swig-src/inversedynamics/: classes.i  inversedynamics.i
swig-src/linearmath/: classes.i  linearmath.i
swig-src/softbody/: btSoftBody.i  classes.i  softbody.i
swig/collision/: ContactListener.i  btBroadphasePairArray.i  btBvhTriangleMeshShape.i  btCollisionObject.i  btMultiSphereShape.i  btTriangleIndexVertexArray.i  classes.i  collision.i
swig/common/: gdxJavaImports.i  gdxMathTypes.i  gdxPool.i  gdxPooledObject.i  gdxPooledTypemap.i
swig/dynamics/: PhysicsAPI.i  btRigidBody.i  classes.i  dynamics.i
swig/extras/: classes.i  extras.i
swig/linearmath/: classes.i
swig/softbody/: btSoftBody.i  classes.i  softbody.i
toolchains/: linux_amd64_gcc.cmake  linux_i386_gcc.cmake  linux_i686_gcc.cmake  linux_windows_amd64_mingw32.cmake  linux_windows_i686_mingw32.cmake  macosx_aarch64_clang.cmake  macosx_amd64_clang.cmake  windows_amd64_msvc.cmake  windows_i386_msvc.cmake  windows_i686_msvc.cmake
(+424 files in other folders)
